[project]
name = "typesense_exporter"
version = "0.1.0"
description = "A Prometheus exporter for Typesense."
authors = [{name = "Solvik"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/numberly/typesense_exporter"
repository = "https://github.com/numberly/typesense_exporter"

[tool.pytest.ini_options]
addopts = "-v --cov=typesense_exporter --cov-report=term-missing --cov-report=xml --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["typesense_exporter"]

[tool.coverage.html]
directory = "coverage_html"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version = "0.0.1"
update_changelog_on_bump = true
major_version_zero = true
